--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<title data-ng-bind="'Reddsight | Official Blockchain Explorer for Reddcoin'">Reddsight</title>
-	<meta name="keywords" content="reddcoins, transactions, blocks, address, block chain, best block, difficulty, hash serialized">
-	<meta name="description" content="Reddcoin Insight. View detailed information on all reddcoin transactions and block.">
+	<title data-ng-bind="'Reddsight | Official Blockchain Explorer for ClickCoin'">Reddsight</title>
+	<meta name="keywords" content="clickcoins, transactions, blocks, address, block chain, best block, difficulty, hash serialized">
+	<meta name="description" content="Clickcoin Insight. View detailed information on all clickcoin transactions and block.">
 	<link rel="shortcut icon" href="/img/icons/favicon.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,400italic">
 	<link rel="stylesheet" href="/css/main.min.css">
@@ -44,23 +44,13 @@
 	</div>
 	<div id="footer" role="navigation">
     <div class="container" data-ng-controller="FooterController">
-      <a class="insight m10v pull-right" target="_blank" href="https://github.com/reddcoin-project/reddsight-api">Reddsight <small>API v{{version}}</small></a>
-      <a class="insight m10v pull-left" target="_blank" href="https://www.reddcoin.com">Reddcoin.com</a>
+      <a class="insight m10v pull-right" target="_blank" href="https://github.com/noise23/reddsight-api">Reddsight <small>API v{{version}}</small></a>
+      <a class="insight m10v pull-left" target="_blank" href="https://www.clickcoin.click">ClickCoin.click</a>
     </div>
   </div>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/vendors.min.js"></script>
 	<script src="/js/angularjs-all.min.js"></script>
 	<script src="/js/main.min.js"></script>
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-49578542-5', 'auto');
-	ga('send', 'pageview');
-
-	</script> 
 </body>
 </html>
