--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 	<div id="footer" role="navigation">
     <div class="container" data-ng-controller="FooterController">
       <a class="insight m10v pull-right" target="_blank" href="https://github.com/noise23/reddsight-api">Reddsight <small>API v{{version}}</small></a>
-      <a class="insight m10v pull-left" target="_blank" href="https://www.clickcoin.click">ClickCoin.click</a>
+      <a class="insight m10v pull-left" target="_blank" href="http://clickcoin.click">ClickCoin.click</a>
     </div>
   </div>
 	<script src="/socket.io/socket.io.js"></script>
